[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redmoon"
version = "0.1.0"
description = "Analyze the relationship between menstrual cycle phases and sleep quality using Apple Health data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Aroa", email = "aroaxinping@gmail.com"},
]
keywords = ["menstrual-cycle", "sleep", "apple-health", "data-science", "womens-health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7", "seaborn>=0.12"]
ml = ["scikit-learn>=1.3"]
dashboard = ["streamlit>=1.30"]
all = ["redmoon[viz,ml,dashboard]"]

[project.scripts]
redmoon = "redmoon.cli:main"

[project.urls]
Homepage = "https://github.com/aroaxinping/redmoon"
Repository = "https://github.com/aroaxinping/redmoon"

[tool.pytest.ini_options]
testpaths = ["tests"]
