[metadata]
name = redmoon
version = 0.1.0
description = Analyze menstrual cycle vs sleep quality from Apple Health data
long_description = file: README.md
long_description_content_type = text/markdown
author = Aroa
author_email = aroaxinping@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = redmoon
python_requires = >=3.9
install_requires =
    pandas>=2.0
    numpy>=1.24
    scipy>=1.10

[options.entry_points]
console_scripts =
    redmoon = redmoon.cli:main
